<resources>
    <string name="app_name">ASN</string>
    <string name="action_settings">Settings</string>
    <string name="conversation">Conversation</string>
    <string name="new_Message">New Message</string>
    <string name="new_Message_account">Add accounts </string>
    <string name="group">Group </string>
    <!-- Sign up page -->
    <string name="firstName">First name</string>
    <string name="emailSignUp">Email</string>
    <string name="lastName">Last name</string>
    <string name="password1">Password</string>
    <string name="password2">Rewrite password</string>
    <string name="signup">Sign up</string>
    <!-- Login page -->
    <string name="name">Student Hub</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="signin">Sign in</string>
    <string name="search">Search</string>
    <!-- my profile -->
    <string name="save">Save</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="title_activity_profile">Profile</string>
    <!-- Toolbar -->
    <string name="home">Home</string>
    <string name="myProfile">PROFILE</string>
    <string name="myGroups">GROUPS</string>
    <string name="myMessages">MESSAGES</string>
    <string name="myNotifications">NOTIFICATIONS</string>
    <string name="myContacts">CONTACTS</string>
    <string name="settings">SETTINGS</string>
    <string name="help">HELP</string>
    <string name="signout">SIGN OUT</string>
    <!--info group-->
    <string name="info">General</string>
    <string name="owner">Group owner</string>
    <string name="admins">Group admins</string>
    <string name="members">Group members</string>
    <string name="groups">Groups</string>
    <string name="addGroup">Add Group</string>
    <!-- Post -->
    <string name="post">Post</string>
    <string name="preview">Preview</string>
    <string name="download">Download</string>
    <string name="title_activity_my_messages">MyMessages</string>
    <!-- Group -->
    <string name="post_something">Write a post</string>
    <!--New Message-->
    <string name="message">Write your message</string>
    <string name="addPoll">Add a poll</string>
    <string name="comment">Comment ...</string>
    <string name="title_activity_conversation">conversation</string>
    <string name="title_activity_update_group">updateGroup</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!--modify group-->
    <string name="modify">Modify</string>
    <string name="manageAdmins">Admins</string>
    <string name="manageMembers">Members</string>
    <string name="manageRequest">Requests</string>
    <string name="about">About</string>
    <string name="delete">Delete member</string>
    <string name="makeAdmin">Add as admin</string>
    <string name="removeAdmin">Remove admin</string>

    <string name="title_activity_group_info">I am here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
