<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.reda_benchraa.asn.login">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_myProfile"
        android:orderInCategory="100"
        android:title="@string/myProfile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_myGroups"
        android:orderInCategory="100"
        android:title="@string/myGroups"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_myMessages"
        android:orderInCategory="100"
        android:title="@string/myMessages"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_myNotifications"
        android:orderInCategory="100"
        android:title="@string/myNotifications"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_signout"
        android:orderInCategory="100"
        android:title="@string/signout"
        app:showAsAction="never" />
</menu>
