<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.reda_benchraa.asn.SignUpActivity"
    android:orientation="vertical"
    android:background="@android:color/background_light">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="36sp"
            android:textAlignment="center"
            android:padding="30dp"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/background_light" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="false"
            android:layout_margin="50dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/signIn_firstName"
                android:hint="@string/firstName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/signIn_lastName"
                android:hint="@string/lastName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/signIn_email"
                android:hint="@string/email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/signIn_password"
                android:hint="@string/password1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/signIn_passwordRetyped"
                android:hint="@string/password2" />

            <Button
                android:text="@string/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signUp_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:padding="0dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:layout_margin="20dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
