<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.reda_benchraa.asn.login"
    tools:showIn="@layout/activity_login"
    android:background="@android:color/background_light">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="36sp"
            android:textAlignment="center"
            android:padding="30dp"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/background_light" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:layout_margin="50dp"
            android:gravity="center_horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editText"
                android:hint="@string/email"
                android:typeface="normal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText2"
                android:hint="@string/password"
                android:typeface="normal" />

            <Button
                android:text="@string/signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:padding="0dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:layout_margin="20dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
