<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.reda_benchraa.asn.MyProfile"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@android:color/background_light">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar">

    </include>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:layout_margin="50dp"
        android:padding="20dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@mipmap/avatar"
            android:id="@+id/myProfile_image"
            android:layout_weight="0.03"
            android:layout_height="125dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myProfile_firstName"
            android:layout_weight="0.03"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myProfile_lastName"
            android:layout_weight="0.03"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/myProfile_email"
                android:layout_weight="1" />

            <ToggleButton
                android:text="ToggleButton"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton3"
                android:textOff="@string/hide"
                android:textOn="@string/show" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myProfile_about"
            android:layout_weight="0.03"
            android:gravity="center_horizontal" />
        <Button
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:padding="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_margin="20dp" />
    </LinearLayout>

</LinearLayout>
